# prism-messenger-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  settings.example.toml
.github/workflows/: docker.yml
src/: context.rs  initialization.rs  main.rs  settings.rs  startup.rs  state.rs  webserver.rs
src/account/: database.rs  entities.rs  mod.rs  router.rs  service.rs
src/account/auth/: header.rs  middleware.rs  mod.rs  service.rs
src/common/: mod.rs  prism_client.rs
src/crypto/: mod.rs  salted_hash.rs
src/database/: inmemory.rs  mod.rs  pool.rs  s3.rs  sqlite.rs
src/keys/: database.rs  entities.rs  error.rs  router.rs  service.rs
src/messages/: database.rs  entities.rs  error.rs  gateway.rs  messaging_service.rs  mod.rs  router.rs  sender_service.rs  service.rs
src/messages/typing/: gateway.rs  service.rs
src/notifications/: mod.rs  service.rs
src/notifications/gateway/: apns.rs  dummy.rs  mod.rs
src/presence/: database.rs  entities.rs  error.rs  gateway.rs  mod.rs  router.rs  service.rs  update_service.rs
src/profiles/: database.rs  entities.rs  error.rs  mod.rs  router.rs  service.rs
src/registration/: entities.rs  error.rs  mod.rs  phone_router.rs  phone_service.rs  router.rs  service.rs
src/registration/phone_number/: mod.rs  router.rs  service.rs
src/registration/username/: mod.rs  router.rs  service.rs
src/telemetry/: init.rs  metrics_registry.rs
src/websocket/: center.rs  mod.rs  router.rs
