[package]
name = "prism-messenger-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# async
tokio = { version = "1.16.1", features = ["full"] }
always_send = { version = "0.1.1" }
async-trait = { version = "0.1.88" }

# Build & CI
config = { version = "0.15.11", default-features = false, features = [
    "toml",
    "convert-case",
] }

# Webserver
axum = { version = "0.8", features = ["tracing"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# OAS Documentation
utoipa = { version = "5.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-axum = { version = "0.2.0" }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "time",
    "macros",
] }

# Crypto
argon2 = "0.5.3"

# Prism
prism-client = { path = "../prism/crates/client", features = ["mockall"] }
keystore-rs = { version = "0.3" }

# Errors
anyhow = "1.0.95"
thiserror = "2"

# Logging
log = "0.4.7"

# Push Notifications
a2 = { version = "0.10.0", features = ["tracing"] }

# Serialization/Deserialization
base64 = "0.22.1"
hex = "0.4.3"
serde = { version = "1.0.151", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["base64"] }
uuid = { version = "1.13.1", features = [
    "serde",
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
] }

# Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# CLI
clap = { version = "4.5.2", features = ["derive"] }

# Testing
mockall = "0.13.1"
chrono = "0.4.39"
